--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 
-  <table>
+  <table cellspacing="20px">
     <tr>
       <td><img src="img/puppy.jpg" alt="beagle puppy"></td>
       <td>
